--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <HTML>
 <head>
-    <title>Index - Deverell's Website</title>
+    <title>About</title>
 
     <meta charset="UTF-8">
     <meta name="description" content="">
@@ -15,9 +15,7 @@
     <base href="" target="_blank"/>
 
     <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="./Assets/CSS/styel.css" />
-    <script src="https://kit.fontawesome.com/f82bfa79a8.js" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" type="text/css" href="./Assets/CSSstyel.css" />
 </head>
 <body>
     <div class="Sidebar">
@@ -27,7 +25,7 @@
     </div>
 
     <div class="Topbar">
-        <span class="left"><a href=""><hi>Roll</hi></a></span>
+        <span class="left"></span>
         <span class="cent"></span>
         <span class="right"></span>
     </div>
@@ -35,79 +33,62 @@
     <Page class="MainContent">
         <section>
             <div class="Title">
-                <h1>Foremost</h1>
-                <h3>Deverell Manning's Official Website</h3>
+                About Me
+                <h3>And My Website</h3>
             </div>
+  <h4><i>WIP</i></h4>
+  <b>Welcome to the in-progress about me page.  This is where you’ll find the where/when/why/how/what/who about my website.</b>
+<h3>Contents:</h3>
+<ul>
+
+<li><a href="#Who">Who am I?</a></li>
+<li><a href="#What">What is on this site?</a></li>
+<li><a href="#Basic">When did I make it?</a></li>
+<li><a href="#Basic">Where did I put it on the internet?</a></li>
+<li><a href="#Why">Why did I make it?</a></li>
+<li><a href="#How">How did I make it?</a></li>
+</ul>
+<h3 id="Basic">Basicly:</h3>
+<p>
+First of all: I, Deverell Manning made this website in October 2020 on GitHub pages.
+</p>
+<h3 id="What">What’s on it?</h3>
+<p>
+I am planning on a number of things to be on here:
+</p>
+<ul>
+<li>Pages about Minecraft.</li>
+<li>An art show.</li>
+<li>Public files.</li>
+<li>Info about How I made this site.</li>
+<li>Some of my projects, like eligotextum.</li>
+<li>Resources and links.</li>
+<li>Maybe clubs/ societies info.</li>
+<li>Basically, things I (and my friends) are interested in.</li>
+</ul>
+<h3 id="Who">Who Am I?</h3>
+<p>My name is Deverell Manning.  It’s not my real name, but, on the internet, I go by Deverell Manning.  You don’t need to know my real name, or where I live, or my exact age.  I’m school aged, and live somewhere in the US.  I fulfill the role of a son and brother in my family.  I like to create things, so art, writing, building, programming, etc.  I have learned to program in C++, HTML, CSS, and some JavaScript.  I like to read, and also play video games.  My favorite game is Minecraft.<br><a href="">Learn More</a></p>
+
+	<p>If you want to contact me, Soon I will set up a system for that to happen.  I can’t just put my email on the site, because I could get spam then, and I’d rather not.  So, you can wait until I can think of a way.  If you have any ideas, please comment below!</p>
+<h3 id="Why">Why did I make this Website?</h3>
+	I made this site for many reasons.  Some are listed, roughly in order of importance:
+<ul>I just wanted to make my own website, for fun.</ul>
+<ul>I wanted to have an independent place on the internet where I could post whatever I want.</ul>
+<ul>I wanted to have a place to hold information, maybe sell things, and maybe a Minecraft server.</ul>
+<ul>I wanted to experiment with HTML.</ul>
+  
+</div>
         </section>
 
-        <section class="Col2PicRight">
-		<p><b>Hello, and welcome to my website!</b>  I'm <abbr title="Me, the Author">Deverell Manning</abbr>.  Here at my website I am showcasing my humble work to my freinds, peers, and people like you.  I hope it's appreciated!  I have recently udated the styling and pages for 2022.  Let's hope for a great year.  Anyway, go and have fun exploring my website!
-		  </p><img src=".\Assets\Images\Sidebar-Background.jpg" width="200px"></img>
-        </section>
-
-        <section class="Col2PicLeft">
-		<img src=".\Assets\Images\Sidebar-Background.jpg" width="200px"></img>
-		<p>Once again, I'm Deverell Manning!  A little bit about me, I dwell near the north-western US.  I'm a member of the Church of Jesus CHrist of Latter Day Saints, /*furry, */and a content creator with a website.  I'm trying to use and grow this website to it's full potential, but being busy, it is taking a long time.  My hobbies/intrests include drawing, programming, Interactive Fiction, Model-building, and Minecrafting.  I also enjoy reading, so I'm open to book suggestions.  For those who know, I know C++, HTML/CSS/JS, and CMD fairly well.  For more about me, visit my <a>About Me</a> page.</p>
-       <br><span><a href="https://www.reddit.com/user/deverell_manning"><i class="fab fa-reddit"></i></a>  -  <a><i class="fab fa-discord"></i></a></span>
-	</section>
-		
         <section>
-		<h3>Navigation:</h3>
- <table class="Nav-Table">
-  <tr>
-    <th>Main Website Pages</th>
-    <td><a href="./index.html">Index</a></td>
-    <td><a href="./Files/index.html">Files</a></td>
-    <td><a href="./Coming.html">Upcoming</a></td>
-    <td><a href="">News</a></td>
-    <td><a href="./About.html">About</a></td>
-    <td><a href="">Sitemap</a></td>
-  </tr>
-  <tr>
-    <th>Main DM pages</th>
-    <td><a href="./About.html">About Me</a></td>
-    <td><a href="./Gallery/Gallery.html">My Gallery</a></td>
-    <td><a href="./Gallery/Notepad.html">†Notepad</a></td>
-    <td><a href="./Projects.html">Projects</a></td>
-  </tr>
-  <tr>
-    <th>NEW Pages</th>
-    <td><a href="./Projects.html">Projects</a></td>
-  </tr>
-  <tr>
-    <th>Current Projects</th>
-    <td><a href="">Terrarium*</a></td>
-    <td><a href="">HOUSE*</a></td>
-    <td><a href="">(All Projects)</a></td>
-  </tr>
-  <tr>
-    <th>Minecraft</th>
-    <td><a href="">Index</a></td>
-  </tr>
-</table> <i>*Coming Soon</i><i title="Everything is a minor work in Progress, unless otherwise specified.">†(MAJOR)Work in Progress</i>
-		
-
         </section>
-
-	<section class=Col3PicCent><div><h3>Do You like what I do?</h3><p>If so, please visit my <b><a href="">community page!</a></b></p>For:<ul><li>Commisions</li><li>Comments</li><li title="Who'd want to do this?">Donations</li><li>Suggestions</li><li>Feedback</li><li>And More!</li></ul></div>
-
-<div><h3><!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1612939,"Users Online","170ddb");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
-</center>
-<!-- END: Powered by Supercounters.com --></p></div>
-
-<div><h3>Do You like what I do?</h3><p>If so, please visit the community page!</p></div>
-
-	</section>
 
         <section class="Footer">
-	    <img src="./Assets/Images/DMLogo_v1.jpg" />
-	    <div>
-            <quote>"That's rough, buddy.<br>-Zuko, Avatar:The Last Airbender"</quote>
+            "<quote>Quote</quote>"
             <address><a href="">deverellmanning.github.io</a></address>
             <br />
-            <hi>Last Updated: 2/12/2022</hi>
-            <hr /></div>
+            <hi>Last Updated: 1/18/2022</hi>
+            <hr />
         </section>
 
     </Page>
