--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </tr>
   <tr>
     <th>Minecraft</th>
-    <td><a href="">Index</a></td>
+    <td><a href="./Topics/Minecraft/">Index</a></td>
   </tr>
 </table> <i>*Coming Soon</i><i title="Everything is a minor work in Progress, unless otherwise specified.">†(MAJOR)Work in Progress</i>
 		
