--- a/About.html
+++ b/About.html
@@ -15,7 +15,7 @@
     <base href="" target="_blank"/>
 
     <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="./Assets/CSSstyel.css" />
+    <link rel="stylesheet" type="text/css" href="./Assets/CSS/styel.css" />
 </head>
 <body>
     <div class="Sidebar">
