--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     <td><a href="./index.html">Index</a></td>
     <td><a href="./Files/index.html">Files</a></td>
     <td><a href="./Coming.html">Upcoming</a></td>
-    <td><a href="">News</a></td>
+    <td><a href="./News.html">News</a></td>
     <td><a href="./About.html">About</a></td>
-    <td><a href="">Sitemap</a></td>
+    <td><a href="./Map.html">Sitemap</a></td>
   </tr>
   <tr>
     <th>Main DM pages</th>
@@ -69,10 +69,12 @@
     <td><a href="./Gallery/Gallery.html">My Gallery</a></td>
     <td><a href="./Gallery/Notepad.html">†Notepad</a></td>
     <td><a href="./Projects.html">Projects</a></td>
+    <td><a href="./Community.html">Community</a></td>
   </tr>
   <tr>
     <th>NEW Pages</th>
     <td><a href="./Projects.html">Projects</a></td>
+    <td><a href="./Community.html">Community</a></td>
   </tr>
   <tr>
     <th>Current Projects</th>
