--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="Sidebar">
-        <iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" title="Iframe Example"></iframe>
+        <iframe src="https://deverellmanning.github.io/Utility/Sidebar/Sidebar.html" title="Sidebar"></iframe>
 
         <div class="Puller">•<br>•<br>•<br></div>
     </div>
@@ -59,7 +59,7 @@
     <td><a href="./index.html">Index</a></td>
     <td><a href="./Files/index.html">Files</a></td>
     <td><a href="./Coming.html">Upcoming</a></td>
-    <td><a href="./News.html">News</a></td>
+    <td><a href="./news.html">News</a></td>
     <td><a href="./About.html">About</a></td>
     <td><a href="./Map.html">Sitemap</a></td>
   </tr>
@@ -80,7 +80,7 @@
     <th>Current Projects</th>
     <td><a href="">Terrarium*</a></td>
     <td><a href="">HOUSE*</a></td>
-    <td><a href="">(All Projects)</a></td>
+    <td><a href="./Projects.html">(All Projects)</a></td>
   </tr>
   <tr>
     <th>Minecraft</th>
