--- a/Community.html
+++ b/Community.html
@@ -33,12 +33,17 @@
     <Page class="MainContent">
         <section>
             <div class="Title">
-                <h1>Title</h1>
-                <h3>Subtitle</h3>
+                <h1>Community</h1>
+                <h3></h3>
             </div>
         </section>
 
         <section>
+            <!-- begin wwww.htmlcommentbox.com -->
+ <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
+ <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24MZnynKUBwNvJ1siahyHGC%2F"+"&opts=16798&num=10&ts=1648867455487");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+<!-- end www.htmlcommentbox.com -->
         </section>
 
         <section class="Footer">
