--- a/Community.html
+++ b/Community.html
@@ -16,6 +16,7 @@
 
     <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
     <link rel="stylesheet" type="text/css" href="./Assets/CSS/styel.css" />
+        <link rel="stylesheet" type="text/css" href="./Assets/CSS/HTMLCOMMENTBOXSTYLES.css" />
 </head>
 <body>
     <div class="Sidebar">
@@ -47,8 +48,7 @@
         </section>
         
         <section>
-             <h3></h3><!-- Start BawkBox Code--><script data-sil-id="6247b915de6f07001ff31ff5">var loadWidget = function() { var d = document, w = window, l = window.location,p = l.protocol == "file:" ? "http://" : "//"; if (!w.WS) w.WS = {}; c = w.WS; var m=function(t, o){ var e = d.getElementsByTagName("script"); e=e[e.length-1]; var n = d.createElement(t); if (t=="script") {n.async=true;} for (k in o) n[k] = o[k]; e.parentNode.insertBefore(n, e)}; m("script", { src: p + "bawkbox.com/widget/chatroom/6247b915de6f07001ff31ff5?page=" +encodeURIComponent(l+''), type: 'text/javascript' }); c.load_net = m; }; if(window.Squarespace){ document.addEventListener('DOMContentLoaded', loadWidget); setTimeOut(function(){ document.addEventListener('DOMContentLoaded', loadWidget); }, 3000) } else { loadWidget() } </script><div class="sil-widget-chatroom sil-widget" id="sil-widget-6247b915de6f07001ff31ff5"><a href="//bawkbox.com/install/chatroom">Public Chatroom</a></div><!-- End BawkBox Code--> 
-        </section>
+              <h3></h3><!-- Start BawkBox Code--><script data-sil-id="6247b915de6f07001ff31ff5">var loadWidget = function() { var d = document, w = window, l = window.location,p = l.protocol == "file:" ? "http://" : "//"; if (!w.WS) w.WS = {}; c = w.WS; var m=function(t, o){ var e = d.getElementsByTagName("script"); e=e[e.length-1]; var n = d.createElement(t); if (t=="script") {n.async=true;} for (k in o) n[k] = o[k]; e.parentNode.insertBefore(n, e)}; m("script", { src: p + "bawkbox.com/widget/chatroom/6247b915de6f07001ff31ff5?page=" +encodeURIComponent(l+''), type: 'text/javascript' }); c.load_net = m; }; if(window.Squarespace){ document.addEventListener('DOMContentLoaded', loadWidget); setTimeOut(function(){ document.addEventListener('DOMContentLoaded', loadWidget); }, 3000) } else { loadWidget() } </script><div class="sil-widget-chatroom sil-widget" id="sil-widget-6247b915de6f07001ff31ff5"><a href="//bawkbox.com/install/chatroom">Public Chatroom</a></div><!-- End BawkBox Code-->         </section>
 
         <section class="Footer">
             "<quote>Quote</quote>"
