--- a/Community.html
+++ b/Community.html
@@ -48,8 +48,32 @@
         </section>
         
         <section>
-              <h3></h3><!-- Start BawkBox Code--><script data-sil-id="6247b915de6f07001ff31ff5">var loadWidget = function() { var d = document, w = window, l = window.location,p = l.protocol == "file:" ? "http://" : "//"; if (!w.WS) w.WS = {}; c = w.WS; var m=function(t, o){ var e = d.getElementsByTagName("script"); e=e[e.length-1]; var n = d.createElement(t); if (t=="script") {n.async=true;} for (k in o) n[k] = o[k]; e.parentNode.insertBefore(n, e)}; m("script", { src: p + "bawkbox.com/widget/chatroom/6247b915de6f07001ff31ff5?page=" +encodeURIComponent(l+''), type: 'text/javascript' }); c.load_net = m; }; if(window.Squarespace){ document.addEventListener('DOMContentLoaded', loadWidget); setTimeOut(function(){ document.addEventListener('DOMContentLoaded', loadWidget); }, 3000) } else { loadWidget() } </script><div class="sil-widget-chatroom sil-widget" id="sil-widget-6247b915de6f07001ff31ff5"><a href="//bawkbox.com/install/chatroom">Public Chatroom</a></div><!-- End BawkBox Code-->         </section>
+              <h3></h3><!-- Start BawkBox Code--><script async="" src="//bawkbox.com/widget/chatroom/6247b915de6f07001ff31ff5?page=https%3A%2F%2Fbawkbox.com%2Fuser%2Fwidgets%2F6247b915de6f07001ff31ff5%2Fedit" type="text/javascript"></script><script data-sil-id="6247b915de6f07001ff31ff5">var loadWidget = function() {
+      var d = document, w = window, l = window.location,p = l.protocol == "file:" ? "http://" : "//";
+      if (!w.WS) w.WS = {}; c = w.WS;
+      var m=function(t, o){ var e = d.getElementsByTagName("script"); e=e[e.length-1];
+      var n = d.createElement(t);
+      if (t=="script") {n.async=true;} for (k in o) n[k] = o[k];
+      e.parentNode.insertBefore(n, e)};
 
+      
+
+      m("script", {
+            src: p + "bawkbox.com/widget/chatroom/6247b915de6f07001ff31ff5?page=" +encodeURIComponent(l+''),
+            type: 'text/javascript'
+      });
+      c.load_net = m;
+};
+
+if(window.Squarespace){
+      document.addEventListener('DOMContentLoaded', loadWidget);
+      setTimeOut(function(){
+            document.addEventListener('DOMContentLoaded', loadWidget);
+      }, 3000)
+} else {
+      loadWidget()
+}
+</script><div class="sil-widget-chatroom sil-widget" id="sil-widget-6247b915de6f07001ff31ff5"><admin></admin><chatroom><div class="chatroom-modal chatbox"> <div class="chatbox-header chatbox-primary primary-color"> <p class="chatbox-header-title"> Public chatroom!</p> <div class="chatbox-header-settings"> <div data-toggle="tooltip" title="Only you see this button" class="btn-admin-wrap" id="admin-btn6247b915de6f07001ff31ff5"> <img class="chatroom-engine" alt="chatbox engine" src="https://bawkbox.com/widget-static/svg/chatbox-icons/engine.svg"> </div> </div> </div> <div id="content">  <div class="chatbox-content" id="messages_list" name="messages_list">   <p class="sender primary-color">You: Testing</p>  </div> <div id="feedback" name="feedback" style="margin-bottom:0"></div> <div id="options" class="chatbox-message-area"> <textarea name="message" cols="30" rows="10" class="chatbox-message-textarea" placeholder="Type a message"></textarea> <div class="chatbox-message-footer"> <a class="chatbox-disclaimer" href="http://bawkbox.com" target="_blank"> <span class="chat-powered-by-text"> Get a Public Chatroom widget. ©</span> <img class="bawkbox-powered-by-logo" src="https://bawkbox.com/widget-static/svg/components/widget-logo.svg"> </a> <div class="chatbox-message-footer-buttons"> <button name="send_btn" class="chatbox-message-footer-button chatbox-send primary-color">SEND</button> </div> </div> </div> </div> <modal><div class="modal-widget fade" tabindex="-1" role="dialog" id="modal-main-container6247b915de6f07001ff31ff5"> <div class="modal-dialog"> <div class="modal-content"> <div class="modal-header"> <div class="modal-title"> <h5></h5>  </div> </div> <form>  <div class="modal-footer">  <button type="submit" class="btn btn-submit-title"> OK </button> </div> </form> <a href="#close-modal" rel="modal:close" class="close-modal"> Close </a> </div> </div> </div></modal> </div></chatroom></div><!-- End BawkBox Code--></div>
         <section class="Footer">
             "<quote>Quote</quote>"
             <address><a href="">deverellmanning.github.io</a></address>
