--- a/Topics/Minecraft/index.html
+++ b/Topics/Minecraft/index.html
@@ -17,7 +17,9 @@
   <link rel="stylesheet" href="./styel1.css">
 
 </head>
-<body>
+<body
+      
+      <div class="Page">
 <div class="Title">
 <h1>Minecraft Page</h1>
 <h3>Minecraft rescorces and stuff</h3>
@@ -99,16 +101,17 @@
   <a href="https://www.reddit.com/r/Minecraft/">Minecraft Reddit</a>
   
 </div>
+  </div>
 
-<div class="Sidebar">
-<iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" style="border:none;" title="Iframe Example" width="100%"></iframe>
+<div class="sidebar">
+<iframe src="https://deverellmanning.github.io/Utility/Sidebar/Sidebar.html" style="border:none;" title="Iframe Example" width="100%"></iframe>
 <br>
-<iframe src="https://deverellmanning.github.io/Poll/Test-Poll" style="border:none;" title="Iframe Example" width="100%"></iframe>
+<iframe src="" style="border:none;" title="Iframe Example" width="100%"></iframe>
 </div>
 
 <div class="Footer">
 <hr>
-<hi>Last Updated: 2/6/2021</hi>
+<hi>Last Updated: 4/2/2021</hi>
 <hr>
 
 <a href="https://deverellmanning.github.io"><address>deverellmanning.github.io</address></a>
