Link work, small changes

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <div class="Topbar">
         <span class="left"><a href=""><hi>Roll</hi></a></span>
         <span class="cent"></span>
-        <span class="right"></span>
+        <span class="right"><a href="./what.html">what?</a></span>
     </div>
 
     <Page class="MainContent">
         <section>
             <div class="Title">
-                <h1>Foremost</h1>
-                <h3>Deverell Manning's Official Website</h3>
+                <h1>Greetings!</h1>
+                <h3>Deverell Manning's <abbr title="Because I said so!">Official</a> Website</h3>
             </div>
         </section>
 
@@ -47,7 +47,7 @@
 
         <section class="Col2PicLeft">
 		<img src=".\Assets\Images\Sidebar-Background.jpg" width="200px"></img>
-		<p>Once again, I'm Deverell Manning!  A little bit about me, I dwell near the north-western US.  I'm a member of the Church of Jesus Christ of Latter Day Saints, furry, and a content creator with a website.  I'm trying to use and grow this website to it's full potential, but being busy, it is taking a long time.  My hobbies/intrests include drawing, programming, Interactive Fiction, Model-building, and Minecrafting.  I also enjoy reading, so I'm open to book suggestions.  For those who know, I know C++, HTML/CSS/JS, and CMD fairly well.  Lastly, I am a begining martial artist and lucid dreamer.  For more about me, visit my <a>About Me</a> page.</p>
+		<p>Once again, I'm Deverell Manning!  A little bit about me, I dwell near the north-western US.  I'm a member of the Church of Jesus Christ of Latter Day Saints, furry, and a content creator with a website.  I'm trying to use and grow this website to it's full potential, but being busy, it is taking a long time.  My hobbies/intrests include drawing, programming, Interactive Fiction, Model-building, and Minecrafting.  I also enjoy reading, so I'm open to book suggestions.  For those who know, I know C++, HTML/CSS/JS, and CMD fairly well.  Lastly, I am a begining martial artist and lucid dreamer.  For more about me, visit my <a href="./About.html">About Me</a> page.</p>
        <br><span><a href="https://www.reddit.com/user/deverell_manning"><i class="fab fa-reddit"></i></a>  -  <a><i class="fab fa-discord"></i></a></span>
 	</section>
 		
@@ -67,14 +67,14 @@
     <th>Main DM pages</th>
     <td><a href="./About.html">About Me</a></td>
     <td><a href="./Gallery/Gallery.html">My Gallery</a></td>
-    <td><a href="./Gallery/Notepad.html">†Notepad</a></td>
+    <td><a href="./Gallery/Notepad.html">Notepad†</a></td>
     <td><a href="./Projects.html">Projects</a></td>
     <td><a href="./Community.html">Community</a></td>
   </tr>
   <tr>
     <th>NEW Pages</th>
     <td><a href="./Projects.html">Projects</a></td>
-    <td><a href="./Community.html">Community</a></td>
+    <td><a href="./Community.html">Community†</a></td>
   </tr>
   <tr>
     <th>Current Projects</th>
@@ -86,19 +86,19 @@
     <th>Minecraft</th>
     <td><a href="./Topics/Minecraft/">Index</a></td>
   </tr>
-</table> <i>*Coming Soon</i><i title="Everything is a minor work in Progress, unless otherwise specified.">†(MAJOR)Work in Progress</i>
+</table> <i>*Coming Soon</i> - <i title="Everything is a minor work in Progress, unless otherwise specified.">†MAJOR Work in Progress</i>
 		
 
         </section>
 
-	<section class=Col3PicCent><div><h3>Do You like what I do?</h3><p>If so, please visit my <b><a href="">community page!</a></b></p>For:<ul><li>Commisions</li><li>Comments</li><li title="Who'd want to do this?">Donations</li><li>Suggestions</li><li>Feedback</li><li>And More!</li></ul></div>
+	<section class=Col3PicCent><div><h3>Do You like what I do?</h3><p>If so, please visit my <b><a href="./Community.html">community page!</a></b></p>For:<ul><li>Commisions</li><li>Comments</li><li title="Who'd want to do this?">Donations</li><li>Suggestions</li><li>Feedback</li><li>And More!</li></ul></div>
 
 <div><h3><!-- BEGIN: Powered by Supercounters.com -->
 <center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1612939,"Users Online","170ddb");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
 </center>
 <!-- END: Powered by Supercounters.com --></p></div>
 
-<div><h3>Do You like what I do?</h3><p>If so, please visit the community page!</p></div>
+<div><h3></h3><p></p></div>
 
 	</section>
 
@@ -106,9 +106,9 @@
 	    <img src="./Assets/Images/DMLogo_v1.jpg" />
 	    <div>
             <quote>"That's rough, buddy.<br>-Zuko, Avatar:The Last Airbender"</quote>
-            <address><a href="">deverellmanning.github.io</a></address>
+            <address><a href="deverellmanning.github.io">deverellmanning.github.io</a></address>
             <br />
-            <hi>Last Updated: 2/12/2022</hi>
+            <hi>Last Updated: 4/4/2022</hi>
             <hr /></div>
         </section>
 
