--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
     <link rel="stylesheet" type="text/css" href="./Assets/CSS/styel.css" />
     <script src="https://kit.fontawesome.com/f82bfa79a8.js" crossorigin="anonymous"></script>
+    <script src="./Assets/Backgrounds/BGRAND.js"
 
 </head>
-<body>
+<body onload="RandBG();">
     <div class="Sidebar">
         <iframe src="https://deverellmanning.github.io/Utility/Sidebar/Sidebar.html" title="Sidebar"></iframe>
 
@@ -29,7 +30,7 @@
     <div class="Topbar">
         <span class="left"><a href=""><hi>Roll</hi></a></span>
         <span class="cent"></span>
-        <span class="right"><a href="./what.html">what?</a></span>
+        <span class="right"><a href="./What.html">what?</a></span>
     </div>
 
     <Page class="MainContent">
