--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
     <link rel="stylesheet" type="text/css" href="./Assets/CSS/styel.css" />
     <script src="https://kit.fontawesome.com/f82bfa79a8.js" crossorigin="anonymous"></script>
-    <script src="./Assets/Backgrounds/BGRAND.js">
+    <script src="./Assets/Backgrounds/BGRAND.js"></script>
 
 </head>
 <body onload="RandBG();">
