Fix script cap error

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="./Assets/Backgrounds/BGRAND.js"></script>
 
 </head>
-<body onload="RandBG();">
+<body onload="randBG();">
     <div class="Sidebar">
         <iframe src="https://deverellmanning.github.io/Utility/Sidebar/Sidebar.html" title="Sidebar"></iframe>
 
