--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body onload="randBG();">
     <div class="Sidebar">
-	    <div id="output"></div>
+	    <div id="output" width="100%">_Output_<br></div>
         <iframe src="https://deverellmanning.github.io/Utility/Sidebar/Sidebar.html" title="Sidebar"></iframe>
 
         <div class="Puller">•<br>•<br>•<br></div>
