--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="./Assets/Backgrounds/BGRAND.js"></script>
 
 </head>
-<body onload="randBG();">
+<body onload="randBG()">
     <div class="Sidebar">
 	    <div id="output" width="100%">_Output_<br></div>
         <iframe src="https://deverellmanning.github.io/Utility/Sidebar/Sidebar.html" title="Sidebar"></iframe>
