Actually make a list of projects

--- a/Projects.html
+++ b/Projects.html
@@ -1,7 +1,7 @@
-﻿<!doctype HTML>
+<!doctype HTML>
 <HTML>
 <head>
-    <title></title>
+    <title>My Projects</title>
 
     <meta charset="UTF-8">
     <meta name="description" content="">
@@ -26,7 +26,7 @@
     </div>
 
     <div class="Topbar">
-        <span class="left"></span>
+	    <span class="left"><a href="deverellmanning.github.io">Home</a></span>
         <span class="cent"></span>
         <span class="right"></span>
     </div>
@@ -34,23 +34,24 @@
 <page class="MainContent">
         <section>
             <div class="Title">
-                <h1>Title</h1>
-                <h3>Subtitle</h3>
+                <h1>Projects</h1>
+                <h3>Things done, doing, not doing and to do</h3>
             </div>
-<p>Hello text stuff he lo po</p>
+<p>--More Info Late--</p>
+		<p>This is a list of projects.  Hover over the icons to see their status.  This list is incomplete.  Thankyou!</p>
 
 	<table class="FullWidth LightTable">
+		<!--
+<i class="fa fa-plus-circle" title="Future">
+<i class="fa fa-pause-circle" title="Stasis">
+<i class="fa-solid fa-screwdriver-wrench" title="In-Progress">
+<i class="fa-regular fa-circle-check" title="Finished">
+		-->
 	<tbody><tr>
 		<th>Status</th>
 		<th>Project</th>
 		<th>Discrition</th>
 		<th><abbr title="Estimated Date for starting the project, finishing the project, or bringing the project out of statis, or past date when it was finished.">Est. Date</abbr></th>
-	</tr>
-	<tr>
-		<td><i class="fa fa-plus-circle" title="Future"></td>
-		<td>Eligotextum</td>
-		<td>Interactive fiction Card Game</td>
-		<td>??</td>
 	</tr>
 	<tr>
 		<td><i class="fa fa-pause-circle" title="Stasis"></td>
@@ -59,15 +60,21 @@
 		<td>??</td>
 	</tr>
 	<tr>
-		<td><i class="fa-solid fa-screwdriver-wrench" title="In-Progress"></i></td>
-		<td>Eligotextum</td>
-		<td>Interactive fiction Card Game</td>
+		<td><i class="fa fa-pause-circle" title="Stasis"></td>
+		<td>HOUSE</td>
+		<td>File System Based <abbr title="Interactive Fiction">IF</abbr> world</td>
 		<td>??</td>
 	</tr>
 	<tr>
-		<td><i class="fa-regular fa-circle-check" title="Finished"></td>
-		<td>Eligotextum</td>
-		<td>Interactive fiction Card Game</td>
+		<td><i class="fa-solid fa-screwdriver-wrench" title="In-Progress"></td>
+		<td>Terrarium</td>
+		<td>I'm building a cool, mossy terrarium!</td>
+		<td>??</td>
+	</tr>
+	<tr>
+		<td><i class="fa fa-pause-circle" title="Stasis"></td>
+		<td>Custom Minecraft Model</td>
+		<td>Using CPM mod.  Hopefully done soon</td>
 		<td>??</td>
 	</tr>
         
@@ -81,10 +88,10 @@
 
 
 </tbody></table><hr></section><section class="Footer">
-            "<quote>Quote</quote>"
+            <quote>"Couldn't Find a Good Quote Today, so: Sorry!"</quote>
             <address><a href="">deverellmanning.github.io</a></address>
             <br>
-            <hi>Last Updated: 1/18/2022</hi>
+            <hi>Last Updated: 4/13/2022</hi>
             <hr>
         </section></page>
 
