--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
     <td><a href="./Projects.html">Projects</a></td>
     <td><a href="./Community.html">Community</a></td>
   </tr>
+<tr>
+    <th>It's Easter!</th>
+    <td><a href="./4">Egg Hunting Thought Expiriment</a></td>
+    <td><a href="./4.html">Poster</a></td>
+  </tr>
   <tr>
     <th>NEW Pages</th>
     <td><a href="./Projects.html">Projects</a></td>
