--- a/Gallery/Gallery.html
+++ b/Gallery/Gallery.html
@@ -42,7 +42,6 @@ I have tried to fix the gallery problems on other browsers, notably Firefox, but
 <br>
 Things not working or aren't added yet:
 <ul>
-<li>Thumbnails - So it loads faster</li>
 <li>Discriptions</li>
 <li>Zooming</li>
 </ul>
@@ -51,9 +50,29 @@ Things not working or aren't added yet:
       <br>
       
       <!-- ----- Start Gallery Table ----- -->
-      <!-- Row 1 -->
+      <!-- Row 4 -->
       <table class="FullWidth" cellpadding="10">
         <tbody>
+		 <tr>
+    <td onclick="Zoom2('c13');">
+         <div class="wrapper" id="c13 ">
+           <img src="./Images/Small/IUFurryPractice1.jpg" alt="A practice i drew from Imaginativly Unimaginative's Furry Drawing Tutorial." onclick="" width="95%" height="95%">
+           <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
+         </div>
+       <span class="title">IUFurryPractice1</span><br>
+       <div class="disc"></div>  <div class="date">4/09/2022</div>
+    </td>
+
+    <td onclick="Zoom2('c14');">
+    </td>
+
+<td onclick="Zoom2('c15');">
+    </td>
+<td onclick="Zoom2('c16');">
+    </td>
+</tr>
+		
+		<!-- Row 3 -->
           <tr>
     <td onclick="Zoom2('c1');">
          <div class="wrapper" id="c1">
@@ -90,6 +109,7 @@ Things not working or aren't added yet:
        <div class="disc"></div>  <div class="date">11/15/2021</div>
     </td>
 </tr>
+		
 <!-- Row 2 -->
 <tr>
 <td onclick="Zoom2('c5');">
@@ -125,8 +145,8 @@ Things not working or aren't added yet:
        <div class="disc"></div>  <div class="date"></div>
     </td>
 </tr>
-<!-- Row 3 -->
-          
+		
+<!-- Row 1 -->       
 <tr>
 <td>
          <div class="wrapper" id="c9">
