Update and rename What.html to old/What.html

--- a/old/What.html
+++ b/old/What.html
@@ -1,4 +1,5 @@
-﻿<html><head>
+<!doctype HTML>
+<html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>What?</title>
 </head><body style="align-content: normal;background-color: #aeceea;">
