Link Easter PAges

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="Topbar">
         <span class="left"><a href=""><hi>Roll</hi></a></span>
         <span class="cent"></span>
-        <span class="right"><a href="./What.html">what?</a></span>
+        <span class="right"><a href="./old/What.html">what?</a></span>
     </div>
 
     <Page class="MainContent">
@@ -76,8 +76,8 @@
   </tr>
 <tr>
     <th>It's Easter!</th>
-    <td><a href="./4">Egg Hunting Thought Expiriment</a></td>
-    <td><a href="./4.html">Poster</a></td>
+    <td><a href="./Events/Easter/2022/EGGHUNT.html">Egg Hunting Thought Expiriment</a></td>
+    <td><a href="./Events/Easter/2022/BUNNYHUNT.html.wip">Poster*</a></td>
   </tr>
   <tr>
     <th>NEW Pages</th>
@@ -116,7 +116,7 @@
             <quote>"That's rough, buddy.<br>-Zuko, Avatar:The Last Airbender"</quote>
             <address><a href="deverellmanning.github.io">deverellmanning.github.io</a></address>
             <br />
-            <hi>Last Updated: 4/4/2022</hi>
+            <hi>Last Updated: 4/15/2022</hi>
             <hr /></div>
         </section>
 
