--- a/Gallery/Gallery.html
+++ b/Gallery/Gallery.html
@@ -195,8 +195,11 @@ Things not working or aren't added yet:
 <br>
 -Aang, 'Avatar: The Last Airbender'.
 </div>
-  <span style=""><hi>Last Updated: 1/13/2021</hi> - <a href="https://deverellmanning.github.io/"><address>deverellmanning.github.io</address></a></span>
+  <span style=""><hi>Last Updated: 1/22/2022</hi> - <a href="https://deverellmanning.github.io/"><address>deverellmanning.github.io</address></a></span>
 <hr>
+	<a href="http://virmir.com/pg.php" target="_blank">
+  <img src="http://virmir.com/images/pg.gif" border="0" />
+</a>
   <br>
   <br>
 
