--- a/Gallery/Gallery.html
+++ b/Gallery/Gallery.html
@@ -35,20 +35,27 @@
       <h3> The place where I show off my creative work!</h3>
     </div>
 <p>
-<b>Welcome to my gallery!</b>
+		     <h3></h3><!-- Start BawkBox Code--><script data-sil-id="626c3141b51df60014e2d9cc">var loadWidget = function() { var d = document, w = window, l = window.location,p = l.protocol == "file:" ? "http://" : "//"; if (!w.WS) w.WS = {}; c = w.WS; var m=function(t, o){ var e = d.getElementsByTagName("script"); e=e[e.length-1]; var n = d.createElement(t); if (t=="script") {n.async=true;} for (k in o) n[k] = o[k]; e.parentNode.insertBefore(n, e)}; m("script", { src: p + "bawkbox.com/widget/simple-poll/626c3141b51df60014e2d9cc?page=" +encodeURIComponent(l+''), type: 'text/javascript' }); c.load_net = m; }; if(window.Squarespace){ document.addEventListener('DOMContentLoaded', loadWidget); setTimeOut(function(){ document.addEventListener('DOMContentLoaded', loadWidget); }, 3000) } else { loadWidget() } </script><div class="sil-widget-simple-poll sil-widget" id="sil-widget-626c3141b51df60014e2d9cc"><a href="//bawkbox.com/install/simple-poll">Simple Polls</a></div><!-- End BawkBox Code--> 
 
+<b>Welcome to my gallery!</b>
+	
+	This is where <i>you</i> get to watch my drawing skills slowly, and painfull, improve!<br>
+	Have Fun!
 </p>
 
 <p>
 I have tried to fix the gallery problems on other browsers, notably Firefox, but problems may keep occuring.  If you DO have a problem, comment it on this site's <a>suggestion page</a>. Make sure you tell me what browser your using, and exactly WHAT isn't working.
-<br>
+April Update:  It is working pretty well now.
+	<br>
 Things not working or aren't added yet:
 <ul>
 <li>Discriptions</li>
 </ul>
 </p>
-
-      <br>
+	  <p>
+	  <b>Final Note:</b>Some of the pictures/scans are high-res, and can take a long time to load.
+	  </p>
+<br>
 
 <!-- 
 <figure onclick="Zoom2('c11');" id="c11">
@@ -116,7 +123,7 @@ Things not working or aren't added yet:
   <img src="./t.png" class="tp">
   <figcaption class="title">Story Page</figcaption>
   <div class="disc"></div>
-  <figcaption> class="date"></figcaption>
+  <figcaption class="date"></figcaption>
 </figure>
 
 <figure onclick="Zoom2('c6');" id="c6">
