--- a/Gallery/Gallery.html
+++ b/Gallery/Gallery.html
@@ -155,7 +155,7 @@ Things not working or aren't added yet:
 <br>
 -Aang, 'Avatar: The Last Airbender'.
 </div>
-  <span style=""><hi>Last Updated: 4/27/2022</hi> - <a href="https://deverellmanning.github.io/"><address>deverellmanning.github.io</address></a></span>
+  <span style=""><hi>Last Updated: 4/29/2022</hi> - <a href="https://deverellmanning.github.io/"><address>deverellmanning.github.io</address></a></span>
 <hr>
   <br>
   <br>
@@ -164,9 +164,9 @@ Things not working or aren't added yet:
 </page>
 
     <div class="Sidebar">
-        <iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" title="Iframe Example"></iframe>
+        <iframe src="https://deverellmanning.github.io/Utility/Sidebar.html" title="Sidebar"></iframe>
 
-        <div class="Puller">•<br>•<br>•<br></div>
+        <div class="Puller" title="pull me!">•<br>•<br>•<br></div>
     </div>
 
 
@@ -183,7 +183,7 @@ Things not working or aren't added yet:
 
         <!-- Image text -->
         <div id="imgtext">description</div>
-        <img src="./Images/transparent.png" style="width:100%;height:100%;position: fixed;top: 0;left: 0;">
+        <img src="./t.png" style="width:100%;height:100%;position: fixed;top: 0;left: 0;">
       </div>
 
 
