--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         <section class="Col2PicRight">
 		<p><b>Hello, and welcome to my website!</b>  I'm <abbr title="Me, the Author">Deverell Manning</abbr>.  Here at my website I am showcasing my humble work to my freinds, peers, and people like you.  I hope it's appreciated!  I have recently udated the styling and pages for 2022.  Let's hope for a great year.  Anyway, go and have fun exploring my website!
 			<br><span><hi><u>NEW</u> - Random Backgrounds!</hi></span>
-		  </p><img src=".\Assets\Images\Sidebar-Background.jpg" width="200px"></img>
+		  </p><img src=".\Assets\Images\Noim.jpg" width="200px"></img>
         </section>
 
         <section class="Col2PicLeft">
-		<img src=".\Assets\Images\Sidebar-Background.jpg" width="200px"></img>
+		<img src=".\Assets\Images\Noim.jpg" width="200px"></img>
 		<p>Once again, I'm Deverell Manning!  A little bit about me, I dwell near the north-western US.  I'm a member of the Church of Jesus Christ of Latter Day Saints, furry, and a content creator with a website.  I'm trying to use and grow this website to it's full potential, but being busy, it is taking a long time.  My hobbies/intrests include drawing, programming, Interactive Fiction, Model-building, and Minecrafting.  I also enjoy reading, so I'm open to book suggestions.  For those who know, I know C++, HTML/CSS/JS, and CMD fairly well.  Lastly, I am a begining martial artist and lucid dreamer.  For more about me, visit my <a href="./About.html">About Me</a> page.</p>
        <br><span><a href="https://www.reddit.com/user/deverell_manning"><i class="fab fa-reddit"></i></a>  -  <a><i class="fab fa-discord"></i></a></span>
 	</section>
