--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
             <address><a href="deverellmanning.github.io">deverellmanning.github.io</a></address>
             <br />
             <hi>Last Updated: 4/15/2022</hi>
+		<a href="http://virmir.com/pg.php" target="_blank">
+		  <img src="http://virmir.com/images/pg.gif" border="0" />
+		</a>
             <hr /></div>
         </section>
 
