--- a/Gallery/Gallery.html
+++ b/Gallery/Gallery.html
@@ -156,9 +156,12 @@ Things not working or aren't added yet:
 -Aang, 'Avatar: The Last Airbender'.
 </div>
   <span style=""><hi>Last Updated: 4/29/2022</hi> - <a href="https://deverellmanning.github.io/"><address>deverellmanning.github.io</address></a></span>
+	<a href="http://virmir.com/pg.php" target="_blank">
+		  <img src="http://virmir.com/images/pg.gif" border="0" />
+		</a>
 <hr>
   <br>
-  <br>
+  
 
 </section>
 </page>
