--- a/Community.html
+++ b/Community.html
@@ -1,7 +1,7 @@
-﻿<!doctype HTML>
+<!doctype HTML>
 <HTML>
 <head>
-    <title></title>
+    <title>Community Page</title>
 
     <meta charset="UTF-8">
     <meta name="description" content="">
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
     <link rel="stylesheet" type="text/css" href="./Assets/CSS/styel.css" />
-        <link rel="stylesheet" type="text/css" href="./Assets/CSS/HTMLCOMMENTBOXSTYLES.css" />
+    <link rel="stylesheet" type="text/css" href="./Assets/CSS/HTMLCOMMENTBOXSTYLES.css" />
 </head>
 <body>
     <div class="Sidebar">
@@ -26,8 +26,8 @@
     </div>
 
     <div class="Topbar">
-        <span class="left"></span>
-        <span class="cent"></span>
+        <span class="left"> This Page is WIP</span>
+        <span class="cent">Hello!</span>
         <span class="right"></span>
     </div>
 
@@ -42,7 +42,6 @@
         <section>
             <!-- begin wwww.htmlcommentbox.com -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
- <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24MZnynKUBwNvJ1siahyHGC%2F"+"&opts=16798&num=10&ts=1648867455487");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 <!-- end www.htmlcommentbox.com -->
         </section>
