--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body onload="randBG()">
     <div class="Sidebar">
 	    <div id="output" width="100%">_Output_<br></div>
-        <iframe src="https://deverellmanning.github.io/Utility/Sidebar/Sidebar.html" title="Sidebar"></iframe>
+        <iframe src="deverellmanning.github.io/Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
 
         <div class="Puller">•<br>•<br>•<br></div>
     </div>
