--- a/Utility/Sidebar/sidenav.html
+++ b/Utility/Sidebar/sidenav.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8"><meta name="robots" content="none" /><base target="_parent">
 <link rel="stylesheet" type="text/css" media="screen" href="Sidebar.css">
-</head><body style="border:black double;">
+</head><body>
 <h3>Navigation</h3>
 <ul>
 <li><a href="deverellmanning.github.io/">Home Page</a></li>
