--- a/Utility/Sidebar/sidenav.html
+++ b/Utility/Sidebar/sidenav.html
@@ -4,15 +4,15 @@
 </head><body>
 <h3>Navigation</h3>
 <ul>
-<li><a href="deverellmanning.github.io/">Home Page</a></li>
-<li><a href="deverellmanning.github.io/Projects.html ">Current Projects</a></li>
-<li><a href="deverellmanning.github.io/About.html">About</a></li>
-<li><a href="deverellmanning.github.io/Community.html ">Community Page</a></li>
-<li><a href="deverellmanning.github.io/news.html">News</a></li>
-<li><a href="deverellmanning.github.io/Gallery/Gallery.html">My Gallery</a>
-<li><a href="deverellmanning.github.io/Gallery/Notepad.html">My Notepad</a>
-<li><a href="deverellmanning.github.io/Shurtleff Family/index.html">Shurtleff Home Page</a></li>
-<li><a href="deverellmanning.github.io/Topics/Minecraft/index.html">Minecraft</a></li>
-<li><a href="deverellmanning.github.io/Art Show/index.html">Art Show</a></li>
+<li><a href="https://deverellmanning.github.io/">Home Page</a></li>
+<li><a href="https://deverellmanning.github.io/Projects.html ">Current Projects</a></li>
+<li><a href="https://deverellmanning.github.io/About.html">About</a></li>
+<li><a href="https://deverellmanning.github.io/Community.html ">Community Page</a></li>
+<li><a href="https://deverellmanning.github.io/news.html">News</a></li>
+<li><a href="https://deverellmanning.github.io/Gallery/Gallery.html">My Gallery</a>
+<li><a href="https://deverellmanning.github.io/Gallery/Notepad.html">My Notepad</a>
+<li><a href="https://deverellmanning.github.io/Shurtleff Family/index.html">Shurtleff Home Page</a></li>
+<li><a href="https://deverellmanning.github.io/Topics/Minecraft/index.html">Minecraft</a></li>
+<li><a href="https://deverellmanning.github.io/Art Show/index.html">Art Show</a></li>
 </ul>
 </body></html>
