--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@ permalink: /404.html
 </head>
 <body>
     <div class="Sidebar">
-        <iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" title="Iframe Example"></iframe>
+        <iframe src="https://deverellmanning.github.io/Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
 
         <div class="Puller">•<br>•<br>•<br></div>
     </div>
