--- a/Utility/Sidebar/sidenav.html
+++ b/Utility/Sidebar/sidenav.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-<meta charset="UTF-8"><meta name="robots" content="none" /><base target="_parent">
+<meta charset="UTF-8"><meta name="robots" content="none" /><base target="_top">
 <link rel="stylesheet" type="text/css" media="screen" href="Sidebar.css">
 </head><body>
 <h3>Navigation</h3>
