--- a/Gallery/Gallery.html
+++ b/Gallery/Gallery.html
@@ -69,6 +69,13 @@ Things not working or aren't added yet:
       <!-- Row 4 -->
       <div class="Gallery">
 
+	      <figure onclick="Zoom2('c14');" id="c14">
+  <img src="./Images/Small/EndOfSchool.png" alt="Time to Draw!">
+  <img src="./t.png" class="tp">
+  <figcaption class="title">School's(Finally) Over!</figcaption>
+  <figcaption class="date">6/9/2022</figcaption>
+</figure>
+	      
 <figure onclick="Zoom2('c13');" id="c13">
   <img src="./Images/Small/IUFurryPractice1.jpg" alt="A practice i drew from Imaginativly Unimaginative's Furry Drawing Tutorial.">
   <img src="./t.png" class="tp">
