--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <section class="Col2PicRight">
 		<p><b>Hello, and welcome to my website!</b>  I'm <abbr title="Me, the Author">Deverell Manning</abbr>.  Here at my website I am showcasing my humble work to my freinds, peers, and people like you.  I hope it's appreciated!  I have recently udated the styling and pages for 2022.  Let's hope for a great year.  Anyway, go and have fun exploring my website!
-			<br><span><hi><u>NEW</u> - Random Backgrounds!</hi></span>
+			<br><span><hi>Vote for <a href="https://www.indiedb.com/games/deep-space-colony" target="_blank">Deep Space Colony in the 2022 Indie of the Year Awards</a></hi></span>
 		  </p><img src=".\Assets\Images\Noim.jpg" width="200px"></img>
         </section>
 
