Update several pages

--- a/About.html
+++ b/About.html
@@ -33,11 +33,10 @@
     <Page class="MainContent">
         <section>
             <div class="Title">
-                About Me
+                <h1>About Me</h1>
                 <h3>And My Website</h3>
             </div>
-  <h4><i>WIP</i></h4>
-  <b>Welcome to the in-progress about me page.  This is where you’ll find the where/when/why/how/what/who about my website.</b>
+  <b>This is my in-progress page about the site.  This is where you’ll find the where/when/why/how/what/who about my website.</b>
 <h3>Contents:</h3>
 <ul>
 
@@ -57,12 +56,12 @@ First of all: I, Deverell Manning made this website in October 2020 on GitHub pa
 I am planning on a number of things to be on here:
 </p>
 <ul>
-<li>Pages about Minecraft.</li>
-<li>An art show.</li>
-<li>Public files.</li>
-<li>Info about How I made this site.</li>
 <li>Some of my projects, like eligotextum.</li>
 <li>Resources and links.</li>
+<li>An art show.</li>
+<li>Public files.</li>
+<li>Pages about Minecraft.</li>
+<li>Info about How I made this site.</li>
 <li>Maybe clubs/ societies info.</li>
 <li>Basically, things I (and my friends) are interested in.</li>
 </ul>
