--- a/Projects.html
+++ b/Projects.html
@@ -37,8 +37,6 @@
                 <h1>Projects</h1>
                 <h3>Things done, doing, not doing and to do</h3>
             </div>
-<p>--More Info Late--</p>
-		<p>This is a list of projects.  Hover over the icons to see their status.  This list is incomplete.  Thankyou!</p>
 
 	<table class="FullWidth LightTable">
 		<!--
@@ -50,23 +48,35 @@
 	<tbody><tr>
 		<th>Status</th>
 		<th>Project</th>
-		<th>Discrition</th>
+		<th>Description</th>
 		<th><abbr title="Estimated Date for starting the project, finishing the project, or bringing the project out of statis, or past date when it was finished.">Est. Date</abbr></th>
 	</tr>
 	<tr>
-		<td><i class="fa fa-pause-circle" title="Stasis"></td>
+		<td><i class="fa-solid fa-screwdriver-wrench" title="In-Progress"></td>
+		<td>Exploration Bot #1</td>
+		<td>Drives around taking pictures.</td>
+		<td>??</td>
+	</tr>
+	<tr>
+		<td><i class="fa-regular fa-circle-check" title="Finished"></td>
+		<td>Raspberry Pi Picture Frame</td>
+		<td>Personal Computer/Drawing Tablet/Ambient Music. Yay!!</td>
+		<td>??</td>
+	</tr>
+	<tr>
+		<td><i class="fa-solid fa-screwdriver-wrench" title="In-Progress"></td>
 		<td>Eligotextum</td>
 		<td>Interactive fiction Card Game</td>
 		<td>??</td>
 	</tr>
 	<tr>
-		<td><i class="fa fa-pause-circle" title="Stasis"></td>
+		<td><i class="fa-solid fa-screwdriver-wrench" title="In-Progress"></td>
 		<td>HOUSE</td>
 		<td>File System Based <abbr title="Interactive Fiction">IF</abbr> world</td>
 		<td>??</td>
 	</tr>
 	<tr>
-		<td><i class="fa-solid fa-screwdriver-wrench" title="In-Progress"></td>
+		<td></td><i class="fa fa-pause-circle" title="Stasis"></td>
 		<td>Terrarium</td>
 		<td>I'm building a cool, mossy terrarium!</td>
 		<td>??</td>
@@ -84,15 +94,9 @@
 		<td>??</td>
 	</tr>
         <tr>
-		<td><i class="fa fa-pause-circle" title="Stasis"></td>
-		<td>Raspberry Pi Picture Frame</td>
-		<td>Picture Frame/Personal Computer/Ambient Music/File Veiwer/etc</td>
-		<td>??</td>
-	</tr>
-        <tr>
-		<td><i class="fa fa-pause-circle" title="Stasis"></td>
+		<td><i class="fa-regular fa-circle-check" title="Finished"></td>
 		<td>Hourly Chime/Room Ambiance</td>
-		<td>Kindof worked.  Waiting for better circumstances.</td>
+		<td>Still needs work, but proven.</td>
 		<td>??</td>
 	</tr>
         <tr>
@@ -101,8 +105,12 @@
 		<td>Worked out pretty well. Used CTGP Revolution.</td>
 		<td>??</td>
 	</tr>
+	<i>List may not be complete at alll times.</i>
 
-</tbody></table><hr></section><section class="Footer">
+</tbody></table><hr></section>
+
+<section class="Footer">
+	<img src="./Assets/Images/DMLogo_v1.jpg" />
             <quote>"Couldn't Find a Good Quote Today, so: Sorry!"</quote>
             <address><a href="">deverellmanning.github.io</a></address>
             <br>
